--- a/lessons/SG3_problem6_interactive_lesson.html
+++ b/lessons/SG3_problem6_interactive_lesson.html
@@ -363,9 +363,25 @@ em6.cell
             <td><input data-field="ms" placeholder="?" /></td>
             <td class="center muted">—</td>
           </tr>
+
+          <tr style="background:#fafafa; font-weight:900;">
+            <td class="muted">Within-subject block</td>
+            <td class="right muted">—</td>
+            <td class="center muted">—</td>
+            <td class="center muted">—</td>
+            <td class="center muted">—</td>
+          </tr>
+
           <tr data-row="B">
             <td>Stimuli (B)</td>
             <td class="right">9.0</td>
+            <td><input data-field="df" placeholder="?" /></td>
+            <td><input data-field="ms" placeholder="?" /></td>
+            <td><input data-field="f" placeholder="?" /></td>
+          </tr>
+          <tr data-row="AB">
+            <td>Damage×Stimuli (A×B)</td>
+            <td class="right">2.0</td>
             <td><input data-field="df" placeholder="?" /></td>
             <td><input data-field="ms" placeholder="?" /></td>
             <td><input data-field="f" placeholder="?" /></td>
@@ -377,12 +393,13 @@ em6.cell
             <td><input data-field="ms" placeholder="?" /></td>
             <td class="center muted">—</td>
           </tr>
-          <tr data-row="AB">
-            <td>Damage×Stimuli (A×B)</td>
-            <td class="right">2.0</td>
-            <td><input data-field="df" placeholder="?" /></td>
-            <td><input data-field="ms" placeholder="?" /></td>
-            <td><input data-field="f" placeholder="?" /></td>
+
+          <tr style="background:#f5f5f5; font-weight:900;">
+            <td>Total</td>
+            <td class="right">116.0</td>
+            <td class="center">53</td>
+            <td class="center muted">—</td>
+            <td class="center muted">—</td>
           </tr>
         </tbody>
       </table>
