6b: remove Total row to match SG3 filled ANOVA table format (ends with Error row)

--- a/lessons/SG3_problem6_interactive_lesson.html
+++ b/lessons/SG3_problem6_interactive_lesson.html
@@ -395,13 +395,7 @@ em6.cell
             <td class="center muted">—</td>
           </tr>
 
-          <tr style="background:#f5f5f5; font-weight:900;">
-            <td>Total</td>
-            <td class="right">116.0</td>
-            <td class="center">53</td>
-            <td class="center muted">—</td>
-            <td class="center muted">—</td>
-          </tr>
+          <!-- SG3 does not include a Total row in this fill-in table -->
         </tbody>
       </table>
 
